<resources>
    <string name="app_name">记账</string>
    <string name="title_activity_main">登录</string>
    <string name="login_user">用户名</string>
    <string name="login_password">密码</string>
    <string name="login_btn">登录/注册</string>
    <string name="Loading_Complete">Loading</string>
    <string name="title_activity_jz">JzActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">username</string>
    <string name="nav_header_subtitle">欢迎使用</string>
    <string name="nav_header_desc"> </string>
    <string name="title_activity_settings">设置</string>
    <string name="close">×</string>
    <string name="money">0.00</string>
    <string name="sz">收入/支出</string>
    <string name="value_add">金额</string>
    <string name="des_add">备注</string>
    <string name="time_add">点击设置时间</string>

    <!-- Strings related to Settings -->

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">同步</string>

    <string name="pref_title_sync_frequency">同步频率</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">系统同步</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">通知</string>

    <string name="pref_title_new_message_notifications">新消息通知</string>

    <string name="pref_title_ringtone">闹铃</string>
    <string name="pref_ringtone_silent">震动</string>

    <string name="pref_title_vibrate">静音</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_add">AddActivity</string>
</resources>
